# opengl-explorer

./: .gitignore  CMakeLists.txt  README.md  logs.h  main.cpp  maths_utils.cpp  maths_utils.h  shader_utils.cpp  shader_utils.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
